JVM crash after call to ClassLoader::setup_bootstrap_search_path()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 12
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b02
    • x86_64
    • linux

      A JVM crash is observed while running apache tomcat 8.5.31 configured to use JDK11 EA 18 build. The tomcat server crashes on start.

      # java --version
      java 11-ea 2018-09-25
      Java(TM) SE Runtime Environment 18.9 (build 11-ea+18)
      Java HotSpot(TM) 64-Bit Server VM 18.9 (build 11-ea+18, mixed mode)

      The following stack trace is observed for this crash:
      Stack: [0x00007ffd18a66000,0x00007ffd18b64000], sp=0x00007ffd18b5f408, free space=997k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      C [libc.so.6+0x14660f] __strlen_sse42+0xf
      V [libjvm.so+0x6030f1] ClassLoader::setup_bootstrap_search_path()+0x111
      V [libjvm.so+0x60377a] classLoader_init1()+0x4a
      V [libjvm.so+0x882549] init_globals()+0x39
      V [libjvm.so+0xde4247] Threads::create_vm(JavaVMInitArgs*, bool*)+0x327
      V [libjvm.so+0x93f652] JNI_CreateJavaVM+0x52

      This crash is observed on the following OS:
      Red Hat Enterprise Linux Server release 7.5 (Maipo)

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Mary Mccarthy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: