8205946: JVM crash after call to ClassLoader::setup_bootstrap_search_path()

Exit vm if setting of boot class path fails.

Reviewed-by: lfoltan, jiangli, dholmes